--- a/assets/libs/template/css/style.css
+++ b/assets/libs/template/css/style.css
@@ -456,6 +456,7 @@ ul.sidebar-menu li a.active i {
     padding-bottom: 15px;
     padding-top: 0px;
     width: 100%;
+    margin-bottom: 40px;
 }
 
 a.logo {
@@ -2446,9 +2447,11 @@ label {
     margin-top: 6px
 }
 
+/* TAMANHO MÍNIMO DE PÁGINA
 .site-min-height {
     min-height: 900px;
 }
+*/
 
 .fa-bars {
     color: #FFFFFF;
